browser: accessibility: fix overflow clipping in document container

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -187,6 +187,7 @@ body {
 	flex: 1;
 	display: block;
 	height: 100%;
+	overflow: clip;
 }
 
 .color-palette-selector {
